--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,27 +9,26 @@
 
     <Button
         android:id="@+id/cancel_btn"
-        android:layout_width="91dp"
+        android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="150dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginLeft="290dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginStart="290dp"
         android:background="#0064B5F6"
         android:text="@string/cancel"
         android:textColor="#818181" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="68dp"
+        android:layout_width="395dp"
+        android:layout_height="96dp"
         android:layout_above="@+id/username"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="198dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="28dp"
+        android:layout_marginTop="190dp"
         android:text="@string/sign_in_text"
         android:textAlignment="center"
         android:textSize="35sp"
