--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="textcolor">#333</color>
     <color name="white">#FFFFFF</color>
     <color name="grey">#D3E0E0E0</color>
+    <color name="white_2">#D3EBE8E8</color>
 </resources>
