--- a/app/src/main/res/layout/message_place.xml
+++ b/app/src/main/res/layout/message_place.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:gravity="bottom"
-    android:orientation="horizontal"
-    android:weightSum="10"
-    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="30dp"
     >
 
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="8"
-        android:textColorHint="#CFD8DC"
-        android:textColor="#CFD8DC"
-        android:hint="@string/write_a_message"
-        android:id="@+id/messageArea"
-        android:maxHeight="80dp"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="bottom"
+        android:orientation="horizontal"
+        android:weightSum="10"
+        >
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:src="@android:drawable/ic_menu_send"
-        android:id="@+id/sendButton"/>
-</LinearLayout>
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:textColorHint="#CFD8DC"
+            android:textColor="#333"
+            android:hint="@string/write_a_message"
+            android:id="@+id/messageArea"
+            android:layout_marginLeft="7dp"
+            android:layout_marginStart="7dp" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:src="@android:drawable/ic_menu_send"
+            android:id="@+id/sendButton"/>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
