--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -44,7 +44,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginEnd="-1dp"
         android:layout_marginRight="-1dp"
-        android:layout_marginTop="51dp" />
+        android:layout_marginTop="51dp"
+        android:entries="@array/times"/>
 
     <Button
         android:id="@+id/change_btn"
